--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,8 +5,9 @@
   <title>IxD Final Presentation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- JQuery and JQuery Mobile Library -->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+  <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
   <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -15,6 +16,10 @@
   <script src="/js/canvas-to-blob.min.js"></script>
   <script src="/js/introHCI.js"></script>
   <script src="/js/camera.js"></script>
+  <!-- MapQuest scripts --->
+  <script src="/js/mapQuest.js"></script>
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
 
   <!-- this is a comment in HTML -->
 
@@ -81,7 +86,7 @@
         </div>
       </div>
       <div class="row">
-       <!--  <div class="col-6">
+      <div class="col-6">
           <div id="camera" class="profile" style="max-width: 250px;">
             <video autoplay id="camera-video"></video>
             <button id="camera-button" class="btn btn-primary">Take Photo</button>
@@ -91,7 +96,6 @@
         <div class="col-6">
           <canvas id="camera-canvas"></canvas>
         </div>
-        -->
       </div>
 
       <h3>RSVP Form</h3>
